syntax = "proto3";
package btcq.btcq.v1;

option go_package = "github.com/btcq-org/btcq/x/btcq/types";
option (gogoproto.goproto_getters_all) = false;

import "btcq/common/common.proto";
import "gogoproto/gogo.proto";

enum VaultType {
  UnknownVault = 0;
  AsgardVault = 1;
}

enum VaultStatus {
  InactiveVault = 0;
  ActiveVault = 1;
  RetiringVault = 2;
  InitVault = 3;
}

message Vault {
  int64 block_height = 1;
  string pub_key = 2;
  repeated common.Coin coins = 3 [
    (gogoproto.castrepeated) = "github.com/btcq-org/btcq/common.Coins",
    (gogoproto.nullable) = false
  ];
  VaultType type = 4;
  VaultStatus status = 5;
  int64 status_since = 6;
  repeated string membership = 7;
  repeated string chains = 8;
  int64 inbound_tx_count = 9;
  int64 outbound_tx_count = 10;
  repeated int64 pending_tx_block_heights = 11;
  repeated string frozen = 23;
}
